corrected overflow

--- a/app/src/components/App/app.scss
+++ b/app/src/components/App/app.scss
@@ -1,10 +1,11 @@
 html, body {
   height: 100%;
-  overflow-x: hidden;
 }
 
 #root {
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 #app {
